New website version by @Hexagoo (just integrated without edition)

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
 app_homepage:
     path:     /
     defaults: { _controller: AppBundle:Default:index }
+app_mentions:
+    path:     /mentions
+    defaults: { _controller: AppBundle:Default:mentions }
